Define decks and cards.